--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
-    "autoprefixer": "^9.5.1",
     "bootstrap": "^4.3.1",
+    "bootstrap4-toggle": "^3.5.0",
+    "core-util-is": "^1.0.2",
     "css-loader": "^2.1.1",
-    "jquery": "^3.4.0",
+    "css-toggle-switch": "^4.1.0",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "popper.js": "^1.15.0",
-    "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
+    "prop-types": "^15.7.2",
+    "rc-slider": "^8.6.13",
+    "react-bootstrap-table": "^4.3.1",
+    "react-compound-slider": "^2.2.0",
+    "react-datepicker": "^2.8.0",
+    "react-datetime": "^2.16.3",
+    "react-datetime-range-picker": "^2.0.5",
+    "react-datetime-slider": "0.0.8",
+    "react-moment": "^0.9.2",
+    "react-scripts": "^3.0.1",
     "react-vis": "^1.11.6",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -19,16 +31,20 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^5.0.0",
     "open-browser-webpack-plugin": "0.0.5",
     "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
