--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-datetime-range-picker": "^2.0.5",
     "react-datetime-slider": "0.0.8",
     "react-moment": "^0.9.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
     "react-vis": "^1.11.6",
     "sass-loader": "^7.1.0",
