--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "precss": "^4.0.0",
     "prop-types": "^15.7.2",
     "rc-slider": "^8.6.13",
+    "react-ace": "^8.0.0",
     "react-bootstrap-table": "^4.3.1",
     "react-compound-slider": "^2.2.0",
     "react-datepicker": "^2.8.0",
