--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "rc-slider": "^8.6.13",
     "react-ace": "^8.0.0",
     "react-bootstrap-table": "^4.3.1",
+    "react-collapse": "^5.0.0",
     "react-compound-slider": "^2.2.0",
     "react-datepicker": "^2.8.0",
     "react-datetime": "^2.16.3",
     "react-datetime-range-picker": "^2.0.5",
     "react-datetime-slider": "0.0.8",
     "react-moment": "^0.9.2",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
     "react-vis": "^1.11.6",
+    "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "xlsx": "^0.14.2"
@@ -45,6 +48,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "redux-devtools": "^3.5.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.7.2"
