--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prop-types": "^15.7.2",
     "rc-slider": "^8.6.13",
     "react-ace": "^8.0.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-bootstrap-table": "^4.3.1",
     "react-collapse": "^5.0.0",
     "react-compound-slider": "^2.2.0",
