--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "universal-cookie": "^4.0.2",
     "xlsx": "^0.14.2"
   },
   "devDependencies": {
