--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "spender",
+  "name": "Spender",
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.54",
     "bootstrap": "^4.3.1",
     "bootstrap4-toggle": "^3.5.0",
     "core-util-is": "^1.0.2",
-    "css-loader": "^2.1.1",
     "css-toggle-switch": "^4.1.0",
     "jquery": "^3.4.1",
     "local-storage": "^2.0.0",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
-    "precss": "^4.0.0",
     "prop-types": "^15.7.2",
     "rc-slider": "^8.6.13",
+    "react": "^16.13.1",
     "react-ace": "^8.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-sidebar": "0.0.1",
@@ -25,41 +27,22 @@
     "react-datetime": "^2.16.3",
     "react-datetime-range-picker": "^2.0.5",
     "react-datetime-slider": "0.0.8",
+    "react-dom": "^16.13.1",
     "react-moment": "^0.9.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.4.1",
     "react-vis": "^1.11.6",
     "redux": "^4.0.4",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "webpack": "^4.43.0",
     "xlsx": "^0.14.2"
   },
-  "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.5",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "less-loader": "^5.0.0",
-    "open-browser-webpack-plugin": "0.0.5",
-    "path": "^0.12.7",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.12.0",
-    "redux-devtools": "^3.5.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.7.2"
-  },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
